# codex

./: .dockerignore  .gitignore  Dockerfile  railway.json  railway.toml
.github/workflows/: gateway-image.yml  railway-image.yml
codex-weixin-bridge/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
codex-weixin-bridge/src/: index.ts  types.ts
codex-weixin-bridge/src/core/: bridge.ts
codex-weixin-bridge/src/media/: attachment-manifest.ts  cdn.ts  image-normalize.ts  inbound-attachments.ts  media-tools.ts  mime.ts  outbound-attachments.ts
codex-weixin-bridge/src/providers/codex/: app-server-client.ts
codex-weixin-bridge/src/store/: dedup-store.ts  state-dir.ts  thread-binding-store.ts  weixin-account-store.ts
codex-weixin-bridge/src/util/: env.ts
codex-weixin-bridge/test/: bridge-typing.test.ts  env.test.ts
gateway/: Dockerfile  README.md  pyproject.toml
gateway/src/codex_gateway/: __init__.py  __main__.py  codex_runner.py  config.py  db.py  messages.py  responses_bridge.py  service.py  slash_commands.py  telegram_api.py
gateway/tests/: test_codex_runner.py  test_config.py  test_db.py  test_responses_bridge.py  test_service.py  test_slash_commands.py
scripts/: app-server-run.sh  app-server-start.sh  app-server-with-weixin-start.sh  codex-app-server-common.sh
